Updated index.html to be more responsive, added web starter kit's gulp config, components and styles.

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="description" content="Astha Sharma portfolio">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Astha Sharma</title>
-	<link rel="stylesheet" href="css/main.css">
+
+	<!-- build:css styles/components/main.min.css -->
+    <link rel="stylesheet" href="styles/h5bp.css">
+    <link rel="stylesheet" href="styles/components/components.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- endbuild -->
+
 	<script src="js/main.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
