Added dummy data for gulp to work, only serve task works, fixed script path in index.html.

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
-	<script src="js/main.js" type="text/javascript" charset="utf-8" async defer></script>
+	<script src="scripts/main.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
 </body>
