--- a/app/index.html
+++ b/app/index.html
@@ -17,5 +17,12 @@
 	<script src="scripts/main.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
 <body>
+	<main>
+      <h1 id="hello">Hello!</h1>
+      <p>Welcome to Web Starter Kit.</p>
+
+      <h2 id="get-started">Get Started.</h2>
+      <p>Read how to <a href="http://developers.google.com/web/starter-kit">Get Started</a> or check out the <a href="styleguide/index.html">Style Guide</a>.</p>
+    </main>
 </body>
 </html>
