Added basic banner template to polymerize.

--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,11 @@
 </head>
 <body>
 	<main>
-	  <p class="huge">Astha Sharma</p>
-      <h2 id="get-started">Get Started.</h2>
+	  <div class="banner">
+	  	<p class="huge">Astha Sharma</p>
+      	<p class="large">Quick learner, faster breaker, all in all a robust maker.</p>
+      	<p class="large">Even my code rhymes...</p>
+	  </div>
     </main>
 </body>
 </html>
