Animate fab button, and ripple ink on press.

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="styles/h5bp.css">
     <link rel="stylesheet" href="styles/components/components.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/animate.css">
     <!-- endbuild -->
 
     <link rel="import" href="lib/font-roboto/roboto.html">
@@ -36,7 +37,7 @@
 		  	<p class="huge">Astha Sharma</p>
 	      	<p class="large">Quick learner, faster breaker, all in all a robust maker.</p>
 	      	<p class="large">Even my code rhymes...</p>
-		  	<paper-fab class="banner-fab" icon="apps"></paper-fab>
+		  	<paper-fab class="banner-fab animated infinite bounce" icon="apps"></paper-fab>
 		  </div>
 	    </main>
 
