Switched to a red pallete, reduce animation iteration to 3.

--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
 		  	<p class="huge">Astha Sharma</p>
 	      	<p class="large">Quick learner, faster breaker, all in all a robust maker.</p>
 	      	<p class="large">Even my code rhymes...</p>
-		  	<paper-fab class="banner-fab animated infinite bounce" icon="apps"></paper-fab>
+		  	<paper-fab class="banner-fab animated bounce" icon="apps"></paper-fab>
 		  </div>
 	    </main>
 
