Font Family changed

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
     <!-- endbuild -->
 
     <link rel="import" href="lib/font-roboto/roboto.html">
+    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Pacifico|Dancing+Script' rel='stylesheet' type='text/css'>
     <link rel="import" href="lib/core-elements/core-elements.html">
     <link rel="import" href="lib/paper-elements/paper-elements.html">
 
