Code clean up, migrate font rules to specific classes instead of huge and large classes. Remove font from subtitle, it reduced readability.

--- a/app/index.html
+++ b/app/index.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="styles/animate.css">
     <!-- endbuild -->
 
+    <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Pacifico'>
+
     <link rel="import" href="lib/font-roboto/roboto.html">
-    <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Pacifico|Dancing+Script' rel='stylesheet' type='text/css'>
     <link rel="import" href="lib/core-elements/core-elements.html">
     <link rel="import" href="lib/paper-elements/paper-elements.html">
 
@@ -36,7 +36,7 @@
     
         <main>
 		  <div class="banner">
-		  	<p class="huge">Astha Sharma</p>
+		  	<p class="huge title">Astha Sharma</p>
 	      	<p class="large">Quick learner, faster breaker, all in all a robust maker.</p>
 	      	<p class="large">Even my code rhymes...</p>
 		  	<paper-fab class="banner-fab animated bounce" icon="apps"></paper-fab>
