Move imports to a seperate vulcanized file for faster load times.

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,7 @@
 
     <link rel="stylesheet" href='http://fonts.googleapis.com/css?family=Pacifico'>
 
-    <link rel="import" href="lib/font-roboto/roboto.html">
-    <link rel="import" href="lib/core-elements/core-elements.html">
-    <link rel="import" href="lib/paper-elements/paper-elements.html">
+    <link rel="import" href="vulcanized.html">
 
 	<script src="scripts/main.js" type="text/javascript" charset="utf-8" async defer></script>
 </head>
