Modified the color scheme

--- a/app/vulcanized.html
+++ b/app/vulcanized.html
@@ -4246,7 +4246,7 @@ html /deep/ core-icon {
   display: inline-block;
   vertical-align: middle;
   background-repeat: no-repeat;
-  fill: currentcolor;
+  fill: #ffffff;
   position: relative;
   height: 24px;
   width: 24px;
