Added toolbar and color scheme

--- a/app/index.html
+++ b/app/index.html
@@ -44,6 +44,8 @@
     </core-header-panel>
 
     <core-header-panel id="apps">
+        <core-toolbar>
+        <span flex>apps</span>
     </core-header-panel>
 
 </body>
