Transitioning to paper-shadow

--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,12 @@
         </header>
         <ul class="guides-list container-medium">
             <li class="guides-list__item g--half theme--multi-device-layouts ">
+            
+              <div class="card paper-shadow-top-z-5">
+                 <div class="card-inner paper-shadow-bottom-z-5">
+               </div>
+              </div>
+            
                 <div class="primary-content">
                     <h3 class="xlarge"><a href="#ignore-click" title="Go to Multi-Device Layouts" class="themed">Sparky</a></h3>
                     <p>Sparky is a weather app. It was my first venture in android app development. A leviathan I was but the app turned out to be hysterically well.</p>
