Linked the apps page with the apps icon

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
             <p class="huge title">Astha Sharma</p>
             <p class="large">Quick learner, faster breaker, all in all a robust maker.</p>
             <p class="large">Even my code rhymes...</p>
-            <paper-fab class="banner-fab animated bounce" icon="apps"></paper-fab>
+            <a href="app.html"><paper-fab class="banner-fab animated bounce" icon="apps"></paper-fab></a>
           </div>
         </main>
 
