--- a/app/index.html
+++ b/app/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name=theme-color content="#FFA300">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Hi, I'm Astha, I make beautiful web and mobile apps.">
-    <title>Astha Sharma</title>
+    <meta name="description" content="Hi, I'm Shantanu, I make beautiful web and mobile apps.">
+    <title>Shantanu Raj</title>
 
     <!-- Add to homescreen -->
     <link rel="manifest" href="manifest.json">
 
     <!-- Fallback to homescreen for Chrome <39 on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Astha Sharma">
+    <meta name="application-name" content="Shantanu Raj">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Astha Sharma">
+    <meta name="apple-mobile-web-app-title" content="Shantanu Raj">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -34,14 +34,15 @@
     <div class=content-container>
         <div class=content>
             <div class=avatar></div>
-            <p>Hi, I’m Astha.</p>
-            <p>I’m a <a href="https://github.com/asthas">web-designer</a><br>and a mobile-app developer.</p>
-            <p>I do a lot of UI design like <a href="http://astha.me">Astha.me</a>, and <a href="http://goo.gl/8Q7ubT">Atten.</a></p>
+            <p>Hi, I’m Shantanu.</p>
+            <p>I’m a <a href="https://github.com/shantanuraj">web-designer</a><br>and a mobile-app developer.</p>
+            <p>I do a lot of UI design like <a href="http://sraj.me">sraj.me</a>, and <a href="http://goo.gl/8Q7ubT">Atten.</a></p>
             <p>I love to code in JavaScript, HTML and CSS</p>
             <div class=icons>
-            <a rel=me href="http://gplus.to/asthas" class="googleplus"></a> 
-            <a rel=me href="https://github.com/asthas" class="github"></a>
-            <a rel=me class="email obfuscated" data-email="a astha me"></a>
+            <a rel="me" href="https://twitter.com/shantanuraj" class="twitter"></a>
+            <a rel="me" href="https://google.com/+ShantanuRajSR" class="googleplus"></a> 
+            <a rel="me" href="https://github.com/shantanuraj" class="github"></a>
+            <a rel="me" class="email obfuscated" data-email="s sixth io"></a>
             </div>
         </div>
     </div>
@@ -54,7 +55,7 @@
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-57999030-1', 'auto');
+      ga('create', 'UA-XXXXXXXX-X', 'auto');
       ga('send', 'pageview');
     </script>
   </body>
