Update image resources and favicon. Update HTML to add details, add twitter to links in CSS and index page.

--- a/app/index.html
+++ b/app/index.html
@@ -35,13 +35,14 @@
         <div class=content>
             <div class=avatar></div>
             <p>Hi, I’m Shantanu.</p>
-            <p>I’m a <a href="https://github.com/shantanuraj">web-designer</a><br>and a mobile-app developer.</p>
-            <p>I do a lot of UI design like <a href="http://sraj.me">sraj.me</a>, and <a href="http://goo.gl/8Q7ubT">Atten.</a></p>
-            <p>I love to code in JavaScript, HTML and CSS</p>
+            <p>I’m a <a href="https://github.com/shantanuraj">web</a> and <a href="http://goo.gl/8Q7ubT">android</a><br> app developer.</p>
+            <p>I  primarily work on backends and logic.<br>But I am a nerd for clean visual design.</p>
+            <p>I love to code in Go.</p>
+            <p>I write a lot of Python and JavaScript too.</p>
             <div class=icons>
             <a rel="me" href="https://twitter.com/shantanuraj" class="twitter"></a>
-            <a rel="me" href="https://google.com/+ShantanuRajSR" class="googleplus"></a> 
             <a rel="me" href="https://github.com/shantanuraj" class="github"></a>
+            <a rel="me" href="https://google.com/+ShantanuRajSR" class="googleplus"></a> 
             <a rel="me" class="email obfuscated" data-email="s sixth io"></a>
             </div>
         </div>
