Add 404 page and styles. Update theme color and ms tile color.

--- a/app/404.html
+++ b/app/404.html
@@ -5,40 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name=theme-color content="#009688">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Hi, I'm Shantanu, I make beautiful web and mobile apps.">
-    <title>Shantanu Raj</title>
+    <title>Page not found &middot; Sraj.me</title>
 
-    <!-- Add to homescreen -->
-    <link rel="manifest" href="manifest.json">
-
-    <!-- Fallback to homescreen for Chrome <39 on Android -->
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Shantanu Raj">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
-
-    <!-- Add to homescreen for Safari on iOS -->
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Shantanu Raj">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
-
-    <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#009688">
-
-    <link rel=stylesheet href="http://fonts.googleapis.com/css?family=Alegreya:400,700">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel=stylesheet href="http://fonts.googleapis.com/css?family=Alegreya:700">
+    <link rel="stylesheet" href="styles/404.css">
   </head>
   <body>
     <div class=top></div>
     <div class=content-container>
         <div class=content>
-            <div class=avatar></div>
-            <p>Hi, I’m Shantanu.</p>
-            <p>I’m a <a href="https://github.com/shantanuraj">web</a> and <a href="http://goo.gl/8Q7ubT">android</a><br> app developer.</p>
-            <p>I  primarily work on backends and logic.<br>But I am a nerd for clean visual design.</p>
-            <p>I love to code in Go.</p>
-            <p>I write a lot of Python and JavaScript too.</p>
+            <p>404 aren't you an inquistive one.</p>
+            <p><a href="http://sraj.me">sraj.me</a></p>
             <div class=icons>
             <a rel="me" href="https://twitter.com/shantanuraj" class="twitter"></a>
             <a rel="me" href="https://github.com/shantanuraj" class="github"></a>
