--- a/app/index.html
+++ b/app/index.html
@@ -36,9 +36,9 @@
             <div class=avatar></div>
             <p>Hi, I’m Shantanu.</p>
             <p>I’m a <a href="https://github.com/shantanuraj">web</a> and <a href="http://goo.gl/8Q7ubT">android</a><br> app developer.</p>
-            <p>I  primarily work on backends and logic.<br>But I am a nerd for clean visual design.</p>
-            <p>I love to code in Go.</p>
-            <p>I write a lot of Python and JavaScript too.</p>
+            <p>I work on backends and logic. But I am a nerd for clean visual design.</p>
+            <p>I love to code in Go.<br>I write a lot of Python and JavaScript too.</p>
+            <p>My <a href="assets/resume.pdf">résumé.</a></p>
             <div class=icons>
             <a rel="me" href="https://twitter.com/shantanuraj" class="twitter"></a>
             <a rel="me" href="https://github.com/shantanuraj" class="github"></a>
