Redesigned the home page, adding banner image

--- a/app/index.html
+++ b/app/index.html
@@ -26,28 +26,26 @@
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#009688">
 
-    <link rel=stylesheet href="http://fonts.googleapis.com/css?family=Alegreya:400,700">
+    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alegreya:400,700"> -->
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <div class=top></div>
-    <div class=content-container>
-        <div class=content>
-            <div class=avatar></div>
-            <p>Hi, I’m Shantanu.</p>
-            <p>I’m a <a href="https://github.com/shantanuraj">web</a> and <a href="http://goo.gl/8Q7ubT">android</a><br> app developer.</p>
-            <p>I work on backends and logic. But I am a nerd for clean visual design.</p>
-            <p>I love to code in Go.<br>I write a lot of Python and JavaScript too.</p>
-            <p>My <a href="assets/resume.pdf">résumé.</a></p>
-            <div class=icons>
-            <a rel="me" href="https://twitter.com/shantanuraj" class="twitter"></a>
-            <a rel="me" href="https://github.com/shantanuraj" class="github"></a>
-            <a rel="me" href="https://google.com/+ShantanuRajSR" class="googleplus"></a> 
-            <a rel="me" class="email obfuscated" data-email="s sixth io"></a>
+    <div class="content">
+
+
+        <div class="banner">
+          <div class="tab-icon">
+              
+            </div>
+
+            <div class="banner-shadow">                
             </div>
         </div>
+        <div class="banner-title">
+                <p>SHANTANU RAJ</p>
+        </div>
+                
     </div>
-    <div class=bottom></div>
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
