--- a/app/index.html
+++ b/app/index.html
@@ -26,25 +26,18 @@
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
     <meta name="msapplication-TileColor" content="#009688">
 
-    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alegreya:400,700"> -->
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alegreya:400,700">
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <div class="content">
-
-
         <div class="banner">
-          <div class="tab-icon">
-              
-            </div>
-
-            <div class="banner-shadow">                
-            </div>
+          <div class="overlay">
+          </div>
         </div>
         <div class="banner-title">
-                <p>SHANTANU RAJ</p>
-        </div>
-                
+                <p>shantanu raj</p>
+        </div>      
     </div>
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
