Resized the banner image adjusted its height and increased padding-top of the text

--- a/app/index.html
+++ b/app/index.html
@@ -32,11 +32,14 @@
   <body>
     <div class="content">
         <div class="banner">
+          <div class="tab-icon">
+            
+          </div>
           <div class="overlay">
           </div>
         </div>
         <div class="banner-title">
-                <p>shantanu raj</p>
+                <p>Shantanu Raj</p>
         </div>      
     </div>
     <!-- build:js scripts/main.min.js -->
