Add app-icon on top.

--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,7 @@
   <body>
     <div class="content">
         <div class="banner">
-          <div class="tab-icon">
-            
+          <div class="app-icon">
           </div>
           <div class="overlay">
           </div>
