Change apps icon image color.

--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
   <body>
     <div class="content">
         <div class="app-icon">
+          <img src="images/apps.svg" width="48px" height="48px">
         </div>
         <div class="banner">
           <div class="overlay">
