Add colors to card.

--- a/app/index.html
+++ b/app/index.html
@@ -44,13 +44,13 @@
          
     </div>
      <div class="card-container">
-          <div class="card">
+          <div class="card red">
           </div>
-          <div class="card">
+          <div class="card green">
           </div>
-          <div class="card">
+          <div class="card blue">
           </div>
-          <div class="card">
+          <div class="card black">
           </div>
       </div>    
     <!-- build:js scripts/main.min.js -->
