Added the place holder images

--- a/app/index.html
+++ b/app/index.html
@@ -44,13 +44,21 @@
          
     </div>
      <div class="card-container">
-          <div class="card red">
+          <div class="card">
+          <img src="http://placekitten.com/g/240/400">
+
           </div>
-          <div class="card green">
+          <div class="card">
+          <img src="http://placekitten.com/g/240/400">
+
           </div>
-          <div class="card blue">
+          <div class="card">
+          <img src="http://placekitten.com/g/240/400">
+
           </div>
-          <div class="card black">
+          <div class="card">
+          <img src="http://placekitten.com/g/240/400">
+
           </div>
       </div>    
     <!-- build:js scripts/main.min.js -->
