Add padding and margin.

--- a/app/index.html
+++ b/app/index.html
@@ -45,19 +45,19 @@
     </div>
      <div class="card-container">
           <div class="card">
-          <img src="http://placekitten.com/g/240/400">
+          <img src="http://placekitten.com/g/240/400" class="screenshot">
 
           </div>
           <div class="card">
-          <img src="http://placekitten.com/g/240/400">
+          <img src="http://placekitten.com/g/240/400" class="screenshot">
 
           </div>
           <div class="card">
-          <img src="http://placekitten.com/g/240/400">
+          <img src="http://placekitten.com/g/240/400" class="screenshot">
 
           </div>
           <div class="card">
-          <img src="http://placekitten.com/g/240/400">
+          <img src="http://placekitten.com/g/240/400" class="screenshot">
 
           </div>
       </div>    
