Added the images of the apps

--- a/app/index.html
+++ b/app/index.html
@@ -30,37 +30,51 @@
     <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
+    <div class="app-icon">
+      <a href="#card-container">
+        <img src="images/apps.svg" width="32px" height="32px">    
+      </a>
+    </div>
+    
     <div class="content">
-        <div class="app-icon">
-          <img src="images/apps.svg" width="32px" height="32px">
-        </div>
         <div class="banner">
           <div class="overlay">
           </div>
         </div>
         <div class="banner-title">
-                <p>Shantanu Raj</p>
+          <p>Shantanu Raj</p>
         </div>
-         
     </div>
-     <div class="card-container">
-          <div class="card">
-          <img src="http://placekitten.com/g/240/400" class="screenshot">
 
-          </div>
+    <div id="card-container">
           <div class="card">
-          <img src="http://placekitten.com/g/240/400" class="screenshot">
+          <p class="description">
+          <img src="images/emgur.png" class="screenshot" height="400px" width="240px" align="left">Available on the Google Play Store.<br>An elegantly designed app to track your attendance,
+          follows Google’s Material Design guidelines.<br>Learned to design logic model, to abstract
+          the view and controller using a MVC inspired coding approach</p>        
+      </div>
 
-          </div>
-          <div class="card">
-          <img src="http://placekitten.com/g/240/400" class="screenshot">
+      <div class="card">
+          <p class="description">
+          <img src="images/emgur.png" class="screenshot" height="400px" width="240px" align="left">Available on the Google Play Store.<br>An elegantly designed app to track your attendance,
+          follows Google’s Material Design guidelines.<br>Learned to design logic model, to abstract
+          the view and controller using a MVC inspired coding approach</p>        
+      </div>
 
-          </div>
-          <div class="card">
-          <img src="http://placekitten.com/g/240/400" class="screenshot">
+      <div class="card">
+          <p class="description">
+          <img src="images/emgur.png" class="screenshot" height="400px" width="240px" align="left">Available on the Google Play Store.<br>An elegantly designed app to track your attendance,
+          follows Google’s Material Design guidelines.<br>Learned to design logic model, to abstract
+          the view and controller using a MVC inspired coding approach</p>        
+      </div>
 
-          </div>
-      </div>    
+      <div class="card">
+          <p class="description">
+          <img src="images/emgur.png" class="screenshot" height="400px" width="240px" align="left">Available on the Google Play Store.<br>An elegantly designed app to track your attendance,
+          follows Google’s Material Design guidelines.<br>Learned to design logic model, to abstract
+          the view and controller using a MVC inspired coding approach</p>        
+      </div>
+    </div>    
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
