Add email field.

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,13 @@
           Shantanu Raj
         </h1>
         <section class="app-bar-actions">
-          <button class="apps"><img src="images/apps.svg" width="48px" height="48px"></button>
+          <a href="#apps">
+            <button><img src="images/apps.svg" width="48px" height="48px"></button>
+          </a>
+          <a rel="me" class="email obfuscated" data-email="s sixth io">
+            <button><img src="images/icon_email.svg" width="48px" height="48px"></button>
+          </a>
+
         </section>
       </div>
     </header>
@@ -73,7 +79,6 @@
           </p>
         </div>
       </div>
-
     </main>
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
