--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#009688">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Hi, I'm Shantanu, I make beautiful web and mobile apps.">
+    <meta name="description" content="Hi, I'm Shantanu, I make web and mobile apps.">
     <title>Shantanu Raj</title>
 
     <!-- Add to homescreen -->
@@ -52,7 +52,7 @@
       <br><br>My <a href="assets/resume.pdf">résumé.</a></p>
 
       <p class="xlarge" id="apps">Apps</p>
-      
+
       <div class="apps-info">
         <div class="app-info g-medium--full g-wide--2">
           <p>
