--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#009688">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Hi, I'm Shantanu, I make web and mobile apps.">
+    <meta name="description" content="Hi, I'm Shantanu, I make APIs, web and mobile apps.">
     <title>Shantanu Raj</title>
 
     <!-- Add to homescreen -->
@@ -80,9 +80,9 @@
         </div>
       </div>
     </main>
-    <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
-    <!-- endbuild -->
+    <script src="https://use.typekit.net/iwz1utz.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
