--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,11 @@
     </header>
 
     <main>
-      <p class="large">I'm a <a href="http://github.com/shantanuraj">web</a> &amp <a href="http://goo.gl/8Q7ubT">android</a> app developer. I work on backends and logic. I am a nerd for functional programming.<br><br>I love to code in TypeScript.I write a lot of Go, Python and JavaScript too.
+      <p class="large">I'm a <a href="http://github.com/shantanuraj">full-stack</a> developer.
+      <br><br>
+      <p>I write Node.js and <a href="http://goo.gl/8Q7ubT">android and sometimes iOS</a> apps. I love to code in TypeScript and work on Go, Python and JavaScript time to time.
+      </p>
+      <p>I heart functional programming</p>
       <br><br>My <a href="assets/resume.pdf">résumé.</a></p>
 
       <p class="xlarge" id="apps">Apps</p>
